vlib/v/checker/tests/struct_arr_mut_field_arr_assign_err.vv
const arr = [1, 2, 3]

struct Muta {
mut:
	a []int
}

fn main() {
	mut muta := Muta{
		a: arr
	}
	muta.a[0] = 52
	println(arr) // [52, 2, 3]
}
